--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^2.38.1",
     "ethers": "^5.7.2",
     "next": "^13.0.2",
+    "nft.storage": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wagmi": "^0.7.13"
