--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "yarn workspace @create-web3/backend test",
     "clean": "yarn workspace @create-web3/backend clean",
     "deploy": "yarn workspace @create-web3/backend deploy",
-    "claimTestnet": "yarn workspace @create-web3/backend claimTestnet"
+    "claimTestnet": "yarn workspace @create-web3/backend claimTestnet",
+    "verify": "yarn workspace @create-web3/backend verify"
   },
   "workspaces": {
     "packages": [
